# lcabyg_web_api_doc

./: LICENSE  README.md  example.py  example_explanation.py  pyproject.toml  sensitivity_analysis.py
doc/: api.csv  api.md
lcabyg_web_api_py/: new_job.py  utils.py
sbi_web_api_py/: new_job.py  raw_api.py
sensitivity_analysis/: constructions.py  general.py  generator.py  nodes_and_edges.py  sensitivity.py  visualize.py
sensitivity_analysis/testdata/: wall.json
sensitivity_analysis/testdata/wall_example/: Others.json
sensitivity_analysis/testdata/wall_example/User/: Element.json  wall_data.json
testdata/lcabyg/single_with_error/User/: Element.json
